download as csv file

--- a/popup.html
+++ b/popup.html
@@ -11,6 +11,8 @@
 <body>
     <h1>Hello world!</h1>
     <h1>Saved Inputs:</h1>
+    <button id="download">Download CSV</button>
+
     <ul id="wordList"></ul>
 
 
