style popup, recent mistakes

--- a/popup.html
+++ b/popup.html
@@ -9,11 +9,18 @@
 </head>
 
 <body>
-    <h1>Hello world!</h1>
-    <h1>Saved Inputs:</h1>
-    <button id="download">Download CSV</button>
 
+    <div id="headButton">
+        <button id="download">Download all as CSV</button>
+    </div>
+
+    <div id="recentMistakesHeader">
+        <h1>Recent Mistakes:</h1>
+    </div>
+
+    <!-- <div id="recentMistakes"> -->
     <ul id="wordList"></ul>
+    <!-- </div> -->
 
 
 
