--- a/popup.html
+++ b/popup.html
@@ -14,6 +14,32 @@
         <button id="download">Download all as CSV</button>
     </div>
 
+
+    <div class="suggestionsCount">
+        <p>Suggestion Count:</p>
+
+
+        <div class="radios-container">
+            <input type="radio" id="option1" name="suggestion" value="1">
+            <label for="option1" class="radio-label"> 1</label>
+
+
+            <input type="radio" id="option2" name="suggestion" value="2">
+            <label for="option2" class="radio-label"> 2</label>
+
+
+            <input type="radio" id="option3" name="suggestion" value="3">
+            <label for="option3" class="radio-label"> 3</label>
+        </div>
+    </div>
+
+    <div>
+        <button id="clearButton" class="button" type="button" onclick="clearRecentMistakes()">
+            Clear all
+        </button>
+    </div>
+
+
     <div id="recentMistakesHeader">
         <h1>Recent Mistakes:</h1>
     </div>
