--- a/popup.html
+++ b/popup.html
@@ -34,19 +34,17 @@
     </div>
 
     <div>
-        <button id="clearButton" class="button" type="button" onclick="clearRecentMistakes()">
+        <button id="clearButton" class="button" type="button">
             Clear all
         </button>
     </div>
 
 
-    <div id="recentMistakesHeader">
+    <div id=" recentMistakesHeader">
         <h1>Recent Mistakes:</h1>
     </div>
 
-    <!-- <div id="recentMistakes"> -->
     <ul id="wordList"></ul>
-    <!-- </div> -->
 
 
 
