--- a/popup.html
+++ b/popup.html
@@ -9,43 +9,48 @@
 </head>
 
 <body>
+    <div id="container">
+        <div id="recentMistakes">
+            <h1>Recent Mistakes:</h1>
 
-    <div id="headButton">
-        <button id="download">Download all as CSV</button>
-    </div>
+            <div id="recentMistakesList">
+                <ul id="wordList"></ul>
+            </div>
+        </div>
+
+        <hr />
+
+        <div class="suggestionsCount">
+            <p>Suggestion Count:</p>
+
+            <div class="radios-container">
+                <input type="radio" id="option1" name="suggestion" value="1">
+                <label for="option1" class="radio-label"> 1</label>
 
 
-    <div class="suggestionsCount">
-        <p>Suggestion Count:</p>
+                <input type="radio" id="option2" name="suggestion" value="2">
+                <label for="option2" class="radio-label"> 2</label>
 
 
-        <div class="radios-container">
-            <input type="radio" id="option1" name="suggestion" value="1">
-            <label for="option1" class="radio-label"> 1</label>
+                <input type="radio" id="option3" name="suggestion" value="3">
+                <label for="option3" class="radio-label"> 3</label>
+            </div>
+        </div>
 
 
-            <input type="radio" id="option2" name="suggestion" value="2">
-            <label for="option2" class="radio-label"> 2</label>
+        <div id="buttonsContainer">
+            <button id="downloadButton">Download as CSV</button>
 
-
-            <input type="radio" id="option3" name="suggestion" value="3">
-            <label for="option3" class="radio-label"> 3</label>
+            <button id="clearButton">Clear all</button>
         </div>
     </div>
 
-    <div>
-        <button id="clearButton" class="button" type="button">
-            Clear all
-        </button>
+    <div id="emptyContainer">
+        <div>
+            <h1>You have not made any spelling mistakes yet</h1>
+            <p>Start typing to track</p>
+        </div>
     </div>
-
-
-    <div id=" recentMistakesHeader">
-        <h1>Recent Mistakes:</h1>
-    </div>
-
-    <ul id="wordList"></ul>
-
 
 
     <script src="./popup.js" type="module"></script>
